# Desktop-app-vulnerabilities-scanner

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.lock.txt  requirements.txt
.github/workflows/: tests.yml
agent/: .env.example  README.md  __init__.py  coding_agent.py  requirements.txt
src/deskscanner/: __init__.py  __main__.py  diff.py  engine.py  locate.py  models.py  scoring.py  unpack.py
src/deskscanner/checks/: __init__.py  app_meta.py  base.py  dependencies.py  efficiency.py  electron_config.py  local_api.py  secrets.py  storage.py
src/deskscanner/data/: dependency_advisories.json  electron_eol.json
src/deskscanner/native/: __init__.py  checks.py  context.py  detect.py  engine.py  macos.py  probe.py
src/deskscanner/reporting/: __init__.py  analysis.py  cli.py  coverage.py  html.py  pdf.py
src/deskscanner/web/: __init__.py  app.py
src/deskscanner/web/static/: app.js  style.css
src/deskscanner/web/templates/: index.html
tests/: conftest.py  helpers.py  test_analysis.py  test_dependencies.py  test_determinism.py  test_diff.py  test_efficiency_checks.py  test_electron_config.py  test_fixture_expected.py  test_impact_summary.py  test_local_api.py  test_locate.py  test_native.py  test_pdf.py  test_report.py  test_scoring.py  test_secrets.py  test_unpack_limits.py  test_unpack_pathtraversal.py  test_web.py
tests/fixtures/: EXPECTED.md
tests/fixtures/insecure_app/: index.html  main.js  package-lock.json  package.json  preload.js
tests/fixtures/secure_app/: index.html  main.js  package.json  preload.js
