[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deskscanner"
version = "1.0.0"
description = "Static security scanner for installed Electron desktop applications + safe loopback inspection."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "deskscanner contributors" }]
keywords = ["electron", "security", "static-analysis", "sast", "asar"]
dependencies = [
    "httpx==0.27.2",
    "packaging==24.1",
    "jinja2==3.1.4",
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "python-multipart==0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
]

[project.scripts]
deskscanner = "deskscanner.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
deskscanner = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
